Solicitacao de cartão já está funcionando.